Added first quote

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Hello World!</p>
+        <ul>
+          <li>"I can't be the good cop. I'm a dick." - Pswolfee
+        </ul>
       </section>
     </div>
 
