--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <ul>
-          <li>"I can't be the good cop. I'm a dick." - Pswolfee
+          <li>"I can't be the good cop. I'm a dick." - Pswolfee</li>
+          <li>"She seems like a screamer." - Pswolfeigh</li>
         </ul>
       </section>
     </div>
