--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <ul>
-          <li>"I can't be the good cop. I'm a dick." - Pswolfee</li>
-          <li>"She seems like a screamer." - Pswolfeigh</li>
+          <li>"I can't be the good cop. I'm a dick" - Pswolfee</li>
+          <li>"She seems like a screamer" - Pswolfeigh</li>
+          <li>"I'll use it to massage my groin" - Nichole. "In which orientation?" - Matthew</li>
         </ul>
       </section>
     </div>
