Added two quotes

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           <li>"I can't be the good cop. I'm a dick" - Pswolfee</li>
           <li>"She seems like a screamer" - Pswolfeigh</li>
           <li>"I'll use it to massage my groin" - Nichole. "In which orientation?" - Matthew</li>
+          <li>"She gives fucks" - Nichole </li>
+          <li>"You want the simple answer? People are stupid" - Fencing Guru</li>
         </ul>
       </section>
     </div>
