--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
           <li>"I'll use it to massage my groin" - Nichole. "In which orientation?" - Matthew</li>
           <li>"She gives fucks" - Nichole </li>
           <li>"You want the simple answer? People are stupid" - Fencing Guru</li>
+          <li>"That guy is a whiny bitch. 'My tip...my tip!'" - Fencing Guru. "Ya, imagine him during sex" - Nichole</li>
+          <li>"I really want to take my pants off" - Nichole</li>
         </ul>
       </section>
     </div>
